nginx_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - 1.mcmattco.com
    - 2.mcmattco.com
    - test.mcmattco.com
    - test2.mcmattco.com
    secretName: nginx-tls
  rules:
  - host: 1.mcmattco.com
    http:
      paths:
      - backend:
          serviceName: nginx-multidomain
          servicePort: 80
  - host: 2.mcmattco.com
    http:
      paths:
      - backend:
          serviceName: nginx-multidomain
          servicePort: 80
  - http:
      paths:
      - backend:
         serviceName: nginx-multidomain
         servicePort: 80
